--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-con-vite",
+  "name": "mercadolibre-clone",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
