--- a/.env_example
+++ b/.env_example
@@ -1,3 +1,3 @@
-VITE_API_BASE_URL=https://api.themoviedb.org/3/
-VITE_API_IMG_URL=https://image.tmdb.org/t/p/original/
+VITE_BASE_URL=https://api.themoviedb.org/3/
+VITE_IMG_URL=https://image.tmdb.org/t/p/original/
 VITE_API_KEY=
