--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.7.0"
+    "@vitejs/plugin-react": "^1.2.0",
+    "vite": "^2.8.6"
   }
 }
