--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "axios": "^0.26.1",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "react-router-dom": "^6.2.1"
+    "react-modal": "^3.14.4",
+    "react-router-dom": "^6.2.1",
+    "react-youtube": "^7.14.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.2.0",
