--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
+    "react-star-rating-lite": "^0.0.11",
     "react-youtube": "^7.14.0"
   },
   "devDependencies": {
