--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_BASE_URL=https://api.themoviedb.org/3/
 NEXT_PUBLIC_IMG_URL=https://image.tmdb.org/t/p/original/
-NEXT_PUBLIC_API_KEY=
+NEXT_PUBLIC_API_KEY=9708e26b3212dc53fa4084f8be9aaff6
