--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "lt-movies",
-  "version": "0.0.0",
-  "license": "MIT",
+  "name": "lt-movies-nextjs",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-    "dependencies": {
-    "axios": "^0.26.1",
-    "react": "^17.0.2",
-    "react-circular-progressbar": "^2.0.4",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "react-modal": "^3.14.4",
-    "react-router-dom": "^6.2.1",
-    "react-youtube": "^7.14.0"
+  "dependencies": {
+    "@types/node": "20.1.2",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "next": "13.4.1",
+    "postcss": "8.4.23",
+    "react": "18.2.0",
+    "react-circular-progressbar": "^2.1.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
+    "react-youtube": "^10.1.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.1"
+    "@types/react-modal": "^3.16.0"
   }
 }
